<resources>
    <string name="app_name">周周记账</string>

    <string name="title_new">记一笔</string>
    <string name="title_setting">设置</string>
    <string name="title_edit">修改</string>
    <string name="title_search">搜索</string>
    <string name="title_search_result">搜索结果</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_change_password">修改密码</string>

    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="dialog_tip">提示</string>
    <string name="delete_confirm">确定删除此条记录吗？</string>
    <string name="submit_log_confirm">当前网络并非wifi，发送错误日志需要消耗流量，是否继续？</string>

    <string name="hint_empty">""</string>
    <string name="hint_username">手机号或邮箱</string>
    <string name="hint_password">密码 8&#8211;30位数字或英文</string>

    <string name="password_see">可见</string>
    <string name="password_hidden">隐藏</string>
    <string name="password_forget">忘记密码?</string>
    <string name="text_register">我要注册</string>
    <string name="click_to_login">点击登录</string>

    <string name="tip_login_error">登录失败</string>
    <string name="tip_login_success">登录成功！</string>
    <string name="tip_username_null">用户名不能为空</string>
    <string name="tip_username_already">用户名已存在</string>
    <string name="tip_username_empty">用户名不存在</string>
    <string name="tip_password_null">密码不能为空</string>
    <string name="tip_password_error">密码错误</string>
    <string name="tip_register_error">注册失败</string>
    <string name="tip_register_success">注册成功，正在登录&#8230;</string>

    <string name="tip_change_password_error">修改失败</string>
    <string name="tip_change_password_old_error">旧密码错误</string>
    <string name="tip_change_password_old_null">请输入旧密码</string>
    <string name="tip_change_password_new_null">请输入新密码</string>
    <string name="tip_change_password_success">密码修改成功！</string>

    <string name="tip_start_datetime_null">请输入开始时间</string>
    <string name="tip_end_datetime_null">请输入结束时间</string>
    <string name="tip_end_before_start">开始时间不能晚于结束时间&#8230;</string>

    <string name="tip_empty">没有相应的记录哦！</string>
    <string name="tip_network_is_connected">网络是否连接了？</string>
    <string name="tip_amount_null">金额是否输入了呢？</string>
    <string name="tip_amount_ensure">请确保金额输入正确哦！</string>
    <string name="tip_type_null">消费类型是否选择了呢？</string>
    <string name="tip_delete_ok">删除成功！</string>
    <string name="tip_modified_ok">修改成功！</string>
    <string name="tip_save_ok">保存成功！</string>

    <string name="tip_check_update_error">检查失败</string>
    <string name="tip_current_lasted">当前已是最新版本！</string>
    <string name="tip_choose_update">是否更新？</string>
    <string name="tip_going_download">即将下载&#8230;</string>

    <string name="tip_feedback_content_null">请填写反馈内容</string>
    <string name="tip_submit_error">反馈信息提交出错</string>
    <string name="tip_submit_success">反馈信息提交成功！</string>
    <string name="tip_send_log">发送错误日志</string>
    <string name="tip_send_log_error">错误日志发送失败</string>
    <string name="tip_send_log_success">错误日志发送成功！</string>

    <string name="vertical_divider">|</string>
    <string name="item_arrow"><![CDATA[>]]></string>

    <string name="share_text">
        周周记账，一个使用方便的记账APP，随时随地满足大家的记账需求哦！（＾_＾）
        http://133.130.89.237:8080/OurAccounts/index
    </string>

    <!-- tab标题 -->
    <string name="tab_add">新的</string>
    <string name="tab_report_list">记录</string>
    <string name="tab_report_chart">统计</string>
    <string name="tab_setting">设置</string>

    <!-- 金额字符 -->
    <string name="rmb_symbol">¥</string>
    <string name="rmb_unit">元</string>

    <!-- 数字键盘 -->
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_dot">.</string>
    <string name="num_del">DEL</string>
    <string name="num_ok">OK</string>

    <!-- imageView contentDescription -->
    <string name="icon_content_description">icon for accounts type</string>

    <!-- set_comment , set_date -->
    <string name="set_comment">备注</string>
    <string name="set_comment_hint">在这里写下您要备注的内容吧！</string>
    <string name="set_date">时间</string>
    <string name="set_date_title">设置时间</string>

    <!-- edit account strings -->
    <string name="edit_amount_tab">金额：</string>
    <string name="edit_datetime_tab">时间：</string>
    <string name="edit_comment_tab">备注：</string>
    <string name="edit_type_tab">类别：</string>

    <!-- search title strings -->
    <string name="search_type">类别</string>
    <string name="search_datetime">时间</string>
    <string name="search_datetime_prepare">快捷选择</string>
    <string name="search_datetime_custom">自由选择</string>
    <string name="search_datetime_start">开始时间：</string>
    <string name="search_datetime_end">结束时间：</string>

    <!-- setting title strings -->
    <string name="setting_about">关于周周记账</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_share">分享好友</string>
    <string name="setting_user_agreement">用户协议</string>
    <string name="setting_user_change_password">修改密码</string>
    <string name="setting_feedback_content_hint">请在这里写下您对记一笔的意见，我们将不断努力改进，感谢支持！</string>
    <string name="setting_feedback_address_hint">您的电话/QQ/邮箱(可选)，以便我们与您联系</string>
    <string name="setting_select_error_log">同时发送错误日志</string>
    <string name="setting_about_contact_us">联系我们：yutianfei1127@163.com</string>
    <string name="setting_about_introduction">随时随地方便您的记账需求</string>
    <string name="setting_about_copyright_have">版权所有</string>
    <string name="setting_about_version"> v</string>
    <string name="update_version_string">当前版本：%1$s , 最新版本：%2$s%3$s</string>
    <string name="setting_logout">退出当前账号</string>

    <!-- 密码修改 -->
    <string name="password_username">用户名：</string>
    <string name="password_old">旧密码：</string>
    <string name="password_new">新密码：</string>
    <string name="password_hint">注：密码应为8&#8211;30位数字或英文</string>
    <string name="password_change_ok">修改</string>

</resources>