<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题栏 -->
    <include layout="@layout/title_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/style_setting_layout"
                android:layout_marginTop="0dp"
                android:background="@mipmap/setting_bg"
                android:gravity="center"
                android:paddingBottom="22dp"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:paddingTop="22dp">

                <ImageView
                    android:id="@+id/id_user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/icon_content_description"
                    android:src="@mipmap/ic_launcher2" />

                <TextView
                    android:id="@+id/id_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/click_to_login"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout style="@style/style_setting_layout">

                <RelativeLayout
                    android:id="@+id/id_setting_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/style_setting_title"
                        android:layout_alignParentStart="true"
                        android:text="@string/setting_feedback" />

                    <TextView
                        style="@style/style_setting_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:text="@string/item_arrow" />
                </RelativeLayout>

                <!-- 分割线 -->
                <View style="@style/style_setting_divider" />

                <TextView
                    android:id="@+id/id_setting_share"
                    style="@style/style_setting_title"
                    android:layout_width="match_parent"
                    android:text="@string/setting_share" />
            </LinearLayout>

            <LinearLayout style="@style/style_setting_layout">

                <RelativeLayout
                    android:id="@+id/id_setting_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/style_setting_title"
                        android:layout_alignParentStart="true"
                        android:text="@string/setting_about" />

                    <TextView
                        style="@style/style_setting_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:text="@string/item_arrow" />
                </RelativeLayout>

                <!-- 分割线 -->
                <View style="@style/style_setting_divider" />

                <TextView
                    android:id="@+id/id_setting_update"
                    style="@style/style_setting_title"
                    android:layout_width="match_parent"
                    android:text="@string/setting_update" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/id_setting_user_agreement"
                style="@style/style_setting_layout">

                <TextView
                    style="@style/style_setting_title"
                    android:layout_alignParentStart="true"
                    android:text="@string/setting_user_agreement" />

                <TextView
                    style="@style/style_setting_title"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="@string/item_arrow" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>