<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/id_error_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/style_password_change_tab"
            android:text="@string/password_username" />

        <TextView
            android:id="@+id/id_username"
            style="@style/style_edit_text"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="0dp"
            android:paddingTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/style_password_change_tab"
            android:text="@string/password_old" />

        <EditText
            android:id="@+id/id_old_password"
            style="@style/style_password_change_edit"
            android:hint="@string/hint_empty"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/style_password_change_tab"
            android:text="@string/password_new" />

        <EditText
            android:id="@+id/id_new_password"
            style="@style/style_password_change_edit"
            android:hint="@string/hint_empty" />
    </LinearLayout>

    <TextView
        style="@style/style_edit_tab"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/password_hint"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/id_button_change_password"
        style="@style/style_dialog_button"
        android:layout_margin="16dp"
        android:background="@drawable/button_common"
        android:text="@string/password_change_ok"
        android:textSize="19sp" />

</LinearLayout>