<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            style="@style/style_search_tab"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_datetime"
            android:textColor="@color/color_text_normal" />

        <TextView
            android:id="@+id/id_choose_datetime"
            style="@style/style_search_tab"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_datetime_custom"
            android:textColor="@color/color_text_selected" />
    </RelativeLayout>

    <!-- 预定义时间 -->
    <GridView
        android:id="@+id/id_search_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:listSelector="@null"
        android:numColumns="4"
        android:padding="16dp"
        android:verticalSpacing="10dp" />

    <!-- 自定义时间 -->
    <LinearLayout
        android:id="@+id/id_search_datetime_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_search_tab"
                android:text="@string/search_datetime_start" />

            <TextView
                android:id="@+id/id_start_datetime"
                style="@style/style_search_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/style_search_tab"
                android:text="@string/search_datetime_end" />

            <TextView
                android:id="@+id/id_end_datetime"
                style="@style/style_search_text" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/id_search_type_tab"
        style="@style/style_search_tab"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/search_type"
        android:textColor="@color/color_text_normal" />

    <!-- 类型 -->
    <GridView
        android:id="@+id/id_search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:listSelector="@null"
        android:numColumns="5"
        android:padding="16dp"
        android:verticalSpacing="10dp" />
</LinearLayout>